displaying cipher items component

--- a/src/app/components/ciphers/ciphers.component.html
+++ b/src/app/components/ciphers/ciphers.component.html
@@ -1,1 +1,3 @@
-<p>ciphers works!</p>
+<h2>Previous Searchs</h2>
+<app-cipher-item *ngFor="let cipher of ciphers" [cipher]="cipher">
+</app-cipher-item>
