--- a/src/app/components/ciphers/ciphers.component.html
+++ b/src/app/components/ciphers/ciphers.component.html
@@ -1,5 +1,6 @@
 <h2>New Encryption</h2>
 <app-encrypt (newEncryption)="newEncryption($event)"></app-encrypt>
+<app-encrypted [encryption]="result"></app-encrypted>
 <h2>Previous Encryptions</h2>
 <app-cipher-item *ngFor="let cipher of ciphers" [cipher]="cipher">
 </app-cipher-item>
